# pomodoro

./: .dockerignore  .gitignore  .prod.env  Dockerfile  Makefile  README.md  alembic.ini  dependecy.py  docker-compose.test.yml  docker-compose.yml  exceptions.py  fixtures.py  main.py  pyproject.toml  pytest.ini  settings.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 0c766c5c388c_type.py  109b1bb1a79b_user_id_in_tasks.py  2b53fa1087c9_extend_user_profile.py  2f65caed7777_access_token_delete.py  509f33be0049_yandex_access_token.py  89b3e130656e_access_token_nullable.py  d982f9cb51b3_extend_user_profile_v2.py  e43adfb747ef_user_init.py
app/: consumer.py  dependecy.py  exceptions.py  main.py  settings.py
app/broker/: __init__.py  consumer.py  producer.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/client/: __init__.py  google.py  mail.py  yandex.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: __init__.py  user_model.py  user_repository.py
tests/integration/auth/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
worker/: celery.py
workflows/: .github.ci.yml
