[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "anyio (>=4.12.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "aio-pika (>=9.5.8,<10.0.0)", # Теперь это можно добавить
]

[tool.poetry]
packages = [{include = "pomodoro_poetry", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"