[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "fastapi>=0.120.3,<0.121.0",
    "uvicorn>=0.38.0,<0.39.0",
    "pydantic>=2.12.3,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "alembic>=1.17.1,<2.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "redis>=7.0.1,<8.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "asyncpg>=0.31.0,<0.32.0",
    "greenlet>=3.3.0,<4.0.0",

    # testing
    "pytest>=9.0.1,<10.0.0",
    "anyio>=4.12.0,<5.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-trio>=0.8.0,<0.9.0",
    "pytest-twisted>=1.14.3,<2.0.0",
    "twisted>=25.5.0,<26.0.0",
    "factory-boy>=3.3.3,<4.0.0",
    "pytest-factoryboy>=2.8.1,<3.0.0",

    # async / messaging
    "celery>=5.6.2,<6.0.0",
    "pika>=1.3.2,<2.0.0",
    "flower>=2.0.1,<3.0.0",
    "amqp>=5.3.1,<6.0.0",
    "aio-pika>=9.5.8,<10.0.0",
    "aiokafka>=0.13.0,<0.14.0",
]

[tool.poetry.dev-dependencies]
black = ">=26.1.0,<27.0.0"
ruff = ">=0.14.14,<0.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"